[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fireworks-training-cookbook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fireworks-ai[training]>=1.0.0a52,<2",
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git@d7fb423674c0bdd27c20a9b948b6091457874039",
    "tqdm",
    "torch",
    "datasets",
    "tiktoken",
    "numpy",
    "transformers",
    "python-dotenv",
    "wandb",
]

[project.optional-dependencies]
eval = [
    "eval-protocol>=0.3.23",
    "pillow",
]
dev = [
    "fireworks-training-cookbook[eval]",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "math-verify",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["training*"]

[tool.pytest.ini_options]
testpaths = ["training/tests"]
markers = [
    "e2e: tests that hit remote Fireworks infrastructure",
    "timeout: per-test timeout budget",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true
include = [
    "recipes/*.py",
    "examples/*/train_*.py",
    "examples/*/prepare_data.py",
]
omit = [
    "*/__init__.py",
]
