[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fireworks-training-cookbook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fireworks-ai[training]>=1.2.0a70,<2",
    "tqdm",
    "torch",
    "datasets",
    "tiktoken",
    "numpy",
    # transformers 5.4+ adds `kimi_k25` to
    # `MODELS_WITH_INCORRECT_HUB_TOKENIZER_CLASS`, which routes Kimi-K2.5/K2.6
    # through `TokenizersBackend`'s tiktoken auto-convert. The conversion
    # collapses gaps in `tokenizer_config.json`'s `added_tokens_decoder` and
    # silently shifts special-token IDs by 1-3 vs the canonical mapping that
    # inference uses (e.g. `<|media_end|>` 163604 -> 163601). The trainer
    # image (serving/train_firetitan/Dockerfile) pins exactly 5.3.0; this
    # range keeps local dev / CI / external users inside the same
    # known-safe zone.
    "transformers>=5.0,<5.4",
    "python-dotenv",
    "wandb",
    "orjson",
]

[project.optional-dependencies]
eval = [
    "eval-protocol>=0.3.23",
    "pillow",
]
dev = [
    "fireworks-training-cookbook[eval]",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "math-verify",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["training*"]

[tool.pytest.ini_options]
testpaths = ["training/tests"]
markers = [
    "e2e: tests that hit remote Fireworks infrastructure",
    "timeout: per-test timeout budget",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true
include = [
    "recipes/*.py",
    "examples/*/train_*.py",
    "examples/*/prepare_data.py",
]
omit = [
    "*/__init__.py",
]
