[project]
name = "fireworks-training-provision"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fireworks-ai[training-sdk]",
    "fireworks-training-cookbook",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
fireworks-ai = { path = "../../../python-sdk", editable = true }
fireworks-training-cookbook = { path = "..", editable = true }

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
